# another-rust-load-balancer

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README.md  backend.toml  generate-benchmarks.sh  generate-ca-and-server-certificate.sh  generate-ca-and-server-certificates.sh  generate-ca-certificate.sh  generate-server-certificate.sh  openssl.md
.cargo/: config
.github/workflows/: release.yaml  rust.yml
benchmarks/: traefik.toml
configs/: least_connection.toml
docs/: acme.md  architecture.md  backend_matching.md  certificates.md  configuration.md  getting_started.md  health_checks.md  lb_strategies.md  middlewares.md
errorpages/: 429.html  500.html
examples/: README.md  docker-compose-ipv6.yml  docker-compose.yml
examples/certificates/: .gitignore  generate-ca-certificate.sh  generate-server-certificate.sh
examples/configs/: backend.toml  client_idle_config.toml  custom_address.toml  health_config.toml  host_matching.toml  https.toml  ipv6.toml
examples/configs/middlewares/: compression.toml  custom_error_pages.toml  http_basic_auth.toml  https_redirect.toml  max_request_size.toml  rate_limit.toml
examples/configs/strategies/: ip_hash.toml  least_connection.toml  random.toml  round_robin.toml  sticky_cookie.toml
examples/errorpages/: 404.html  429.html
examples/x509/: ca.cer  ca.key  https.localhost.cer  https.localhost.cnf  https.localhost.csr  https.localhost.key
src/: acme.rs  backend_pool_matcher.rs  configuration.rs  error_response.rs  health.rs  http_client.rs  lb_strategies.rs  listeners.rs  logging.rs  main.rs  middleware.rs  server.rs  tls.rs  utils.rs
src/lb_strategy/: ip_hash.rs  mod.rs  random.rs  round_robin.rs  sticky_cookie.rs
src/load_balancing/: ip_hash.rs  least_connection.rs  mod.rs  random.rs  round_robin.rs  sticky_cookie.rs
src/middleware/: authentication.rs  compression.rs  custom_error_pages.rs  https_redirector.rs  maxbodysize.rs  mod.rs  properties.txt  rate_limiter.rs  sticky_cookie_companion.rs
