[package]
name = "another-rust-load-balancer"
version = "1.0.0"
authors = [
  "Adrodoc <adrodoc55@googlemail.com>",
  "Zynaa <zyna1+github@protonmail.com>",
  "Jonas Dellinger <jonas@dellinger.dev>",
  "lor-enz <git@lorenz.kiwi>",
  "Martinif <silas@gaf.fs.lmu.de>",
  "skess42 <skagaros@gmail.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acme-lib = "0.8"
arc-swap = "1.2"
async-compression = { version = "0.3", features = ["brotli", "deflate", "gzip", "tokio"] }
async-stream = "0.3"
async-trait = "0.1"
bytes = "0.5"
chrono = "0.4"
clap = "2.33"
cookie = "0.14"
futures = "0.3"
futures-util = "0.3"
gethostname = "0.2"
http-auth-basic = "0.1"
hyper = { version = "0.14", features = ["client", "server", "http1", "http2", "stream"] }
hyper-rustls = "0.22"
hyper-timeout = "0.4"
ldap3 = "0.9"
linked-hash-map = "0.5"
log = "0.4"
log4rs = "1.0"
notify = "4.0"
pin-project = "1.0"
pom = "3.2"
rand = "0.8"
regex = "1.4"
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1.0", features = ["full"] }
tokio-rustls = "0.22"
tokio-test = "0.4"
tokio-util = { version = "0.6", features = ["full"] }
toml = { version = "0.5", features = ["preserve_order"] }
url = "2.2"
