[package]
name = "another-rust-load-balancer"
version = "1.0.0"
authors = [
  "Adrodoc <adrodoc55@googlemail.com>",
  "Jonas Dellinger <jonas@dellinger.dev>",
  "lor-enz <git@lorenz.kiwi>",
  "Martinif <silas@gaf.fs.lmu.de>",
  "skess42 <skagaros@gmail.com>",
  "Zynaa <zyna1+github@protonmail.com>",
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
debug = 0
# split-debuginfo="off"
strip = "symbols"
debug-assertions=false
overflow-checks=false
lto=true
panic="abort"
incremental=true
codegen-units=1
rpath=true

[dependencies]
acme-lib = "0.8"
arc-swap = "1.5"
async-compression = { version = "0.3", features = ["brotli", "deflate", "gzip", "tokio"] }
async-stream = "0.3"
async-trait = "0.1"
clap = "3.1"
cookie = "0.16"
futures = "0.3"
gethostname = "0.2"
http-auth-basic = "0.3"
hyper = { version = "0.14", features = ["client", "server", "http1", "http2", "stream", "tcp"] }
ldap3 = "0.10"
hyper-timeout = "0.4"
linked-hash-map = "0.5"
log = "0.4"
log4rs = "1.0"
notify = "4.0"
pin-project = "1.0"
pom = "3.2"
rand = "0.8"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
tokio = {version = "1.17", features = ["full"] }
tokio-rustls = "0.23"
tokio-util = { version = "0.7", features = ["full"] }
toml = { version = "0.5", features = ["preserve_order"] }
url = "2.2"
rustls-pemfile = "0.3"
openssl-sys = { version = "0.9", features = ["vendored"] }

[dev-dependencies]
tokio-test = "0.4"
bytes = { version = "1.1", features = ["serde"] }
chrono = "0.4"
futures-util = "0.3.21"
hyper-rustls = "0.23"

